--- a/project/skeletonhome.html
+++ b/project/skeletonhome.html
@@ -42,6 +42,7 @@
             margin-left: auto;
             margin-right: auto;
             padding-bottom: 5em;
+            max-width: 100%;
         }
         .nav {
             margin: 1em;
@@ -98,6 +99,11 @@
         .imageblue {
             margin-bottom: 7em;
         }
+        .imageblue, .imageblack {
+            background-color: rgb(132, 196, 233);
+            padding: 1em;
+            border-radius: 1em;
+        }
         .navselector {
             justify-content: flex-end;
             text-align: right;
@@ -106,8 +112,12 @@
             justify-content: space-between;
         }
         h1, h2 {
-            font-family: 'Abril Fatface', cursive;
+            font-family: 'Abril Fatface';
         }
+        @media only screen and (max-width: 600px) {
+            h2 {max-width: 100%;} 
+            .both {flex-wrap: wrap;}
+        }   
     </style>
 </head>
 <body>
@@ -142,7 +152,7 @@
 </section>
     <h2>Tour Dates</h2>
     <div class="both">
-        <div>
+        <div class="biggertable">
             <div class="wholetable">
                 <table>
                     <caption>Get your tickets now!</caption>
@@ -197,11 +207,10 @@
         <div class="imagestogether">
             <div class="images">
                 <img class="imageblue" src="images/home1.jpg" width="300" alt="my photo">
-                <img src="images/home2.jpg" width="300" alt="my photo">
+                <img class="imageblack" src="images/home2.jpg" width="300" alt="my photo">
             </div>
         </div>
     </div>
-
     <br>
     <hr>
     <br>
